--- a/components/layout/Footer.module.css
+++ b/components/layout/Footer.module.css
@@ -1,6 +1,6 @@
 .div_footer {
   min-height: 100px;
-  border: 1px solid lightblue;
+  border: 1px solid black;/*lightblue;*/
   padding: 10px;
   margin: 10px 0 10px 0;
 }
