--- a/components/PageHome/PageHome.module.css
+++ b/components/PageHome/PageHome.module.css
@@ -1,50 +1,107 @@
 /* homepage first block - card -------------------------- */
-.block_info {
-  display: grid;
-  grid-template-columns: 1fr 1fr;  
+
+/*desktop*/
+@media (min-width: 650px) {
+  .block_info {
+    display: grid;
+    grid-template-columns: 1fr 1fr;  
+  }
+  .block_info_rightSection {
+    display: grid;
+    grid-template-rows: 3fr 2fr;
+    margin: 40px;
+  }
 }
+
+/*mobile*/
+@media (max-width: 650px) {
+  .block_info {
+    display: grid;
+    grid-template-rows: 1fr 1fr;  
+  } 
+  .block_info_rightSection {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    margin: 40px;
+  }   
+}
+
+/* not changing */
 .block_info_image {
-  max-width: 350px;
-  max-height: 350px;
-  margin: 40px;
-}
-.block_info_rightSection {
-  display: grid;
-  grid-template-rows: 3fr 2fr;
-  margin: 40px;
+  /*max-width: 350px;
+  max-height: 350px;*/
+  margin: 10px auto;
 }
 .block_info_rightSection__content {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  max-height: 250px;
+}
+.block_info_rightSection__content_name {
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center
+}
+.block_info_rightSection__content_descr {
+  font-size: 24px;
+  font-weight: bold;  
+  text-align: center;
 }
 
-.block_info_rightSection__content_name {
-  font-size: 26px;
-  font-weight: bold;
+.block_info_rightSection__content_slogan {
+  font-size: 24px;
 }
+
 
 
 
 /* homepage second block - therapies -------------------------- */
-.block_therapy__ul {
-  display: flex;  
-  flex-direction: row;
-  flex-wrap: wrap;
-  padding: 0px;
-  list-style: none;
+/*desktop*/
+@media (min-width: 650px) {
+  .block_therapy__ul {
+    display: flex;  
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 0px;
+    list-style: none;
+  }  
+
+  .block_therapy__li {
+    border: 1px solid black;
+    width: 260px;
+    min-height: 180px;
+    margin: 5px 20px;
+    padding: 10px;
+    justify-content: space-around;  
+    background-color: #D5D5FE;
+  }  
 }
 
-.block_therapy__li {
-  border: 1px solid black;
-  width: 260px;
-  min-height: 180px;
-  margin: 5px 20px;
-  padding: 10px;
-  justify-content: space-around;  
-  background-color: #D5D5FE;
+/*mobile*/
+@media (max-width: 650px) {
+  .block_therapy__ul {
+    display: flex;  
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding: 0px;
+    list-style: none;
+  }  
+
+  .block_therapy__li {
+    border: 1px solid black;
+    /*width: 260px;*/
+    min-height: 180px;
+    margin: 5px 20px;
+    padding: 10px;
+    justify-content: space-around;  
+    background-color: #D5D5FE;
+  }  
 }
+
+
+
 
 .therapCard_head {
   background-color: #FFF8F8;
