--- a/pages/about/PageAbout.module.css
+++ b/pages/about/PageAbout.module.css
@@ -1,22 +1,56 @@
-.conf_ul {
-  display: flex;  
-  flex-direction: row;
-  flex-wrap: wrap;
-  padding: 0px;
-  list-style: none;  
+
+/* conferences -------------------------- */
+
+/*desktop*/
+@media (min-width: 650px) {
+  .conf_ul {
+    display: flex;  
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 0px;
+    list-style: none;  
+  }
+
+  .conf_li {
+    border: 1px solid black;
+    width: 260px;
+    min-height: 180px;
+    margin: 5px 20px;
+    padding: 10px;
+    justify-content: space-around;  
+    background-color: #D5D5FE;
+  }
+
 }
 
-.conf_li {
-  border: 1px solid black;
-  width: 260px;
-  min-height: 180px;
-  margin: 5px 20px;
-  padding: 10px;
-  justify-content: space-around;  
-  background-color: #D5D5FE;
+/*mobile*/
+@media (max-width: 650px) {
+  .conf_ul {
+    display: flex;  
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding: 0px;
+    list-style: none;  
+  }
+
+  .conf_li {
+    border: 1px solid black;
+    /*width: 260px;*/
+    min-height: 180px;
+    margin: 5px 20px;
+    padding: 10px;
+    justify-content: space-around;  
+    background-color: #D5D5FE;
+  }  
+}
+
+/* not changing */
+.div_edu {
+  margin-bottom: 10px;
 }
 
 
+/* client reviews -------------------------- */
 .review_ul {
   display: flex;  
   flex-direction: column;
@@ -43,7 +77,6 @@
 .review_li__img {
   max-width: 120px;
   max-height: 120px;
-  /*margin: 20px;*/
 }
 
 .review_text {
