--- a/pages/reviews/PageReviews.module.css
+++ b/pages/reviews/PageReviews.module.css
@@ -32,6 +32,12 @@
   justify-content: space-around;
 }
 
+.content_text_name {
+  font-weight: bold;
+  font-size: 20px;  
+}
+
+
 /* single review */
 .singleRev_ul {
   padding: 0;
@@ -41,3 +47,5 @@
   grid-template-columns: 1fr 3fr;
   margin-bottom: 10px;
 }
+
+
