--- a/components/ui/my_yandex_map/my_y_map.module.css
+++ b/components/ui/my_yandex_map/my_y_map.module.css
@@ -1,16 +1,17 @@
 
-/* desktop */
-@media (min-width: 650px) {
-  .wrp {
-    width: 900px;
+/*desktop*/
+@media (min-width: 700px) {
+  .map_wrapper {
+    width: 100%;
     height: 400px;
   }
 }
 
-/* mobile */
-@media (max-width: 650px) {
-  .wrp {
-    width: 500px;
-    height: 250px;
+
+/*mobile*/
+@media (max-width: 700px) {
+  .map_wrapper {
+    width: 100%;
+    height: 200px;
   }
 }
